--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -2687,7 +2687,7 @@ a {
 blockquote {
   margin: 20px 0;
   padding-left: 1.5rem;
-  border-left: 5px solid #ee6e73;
+  border-left: 5px solid #3949ab;
 }
 
 i {
@@ -9037,7 +9037,7 @@ input[type=range]::-ms-thumb {
 
 .timepicker-canvas-bearing {
   stroke: none;
-  fill: #26a69a;
+  fill: #3949ab;
 }
 
 .timepicker-canvas-bg {
